@@ -1,3 +1,6 @@
+/**
+ * BSD-style license; for more info see http://pmd.sourceforge.net/license.html
+ */
 package net.sourceforge.pmd.lang.java.rule.design;
 
 import net.sourceforge.pmd.testframework.SimpleAggregatorTst;
